multitenancy-benchmarks/require-resource-quota/.chainsaw-test/ns-bad.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bad-ns
spec: {}
