multitenancy-benchmarks/require-resource-quota/.chainsaw-test/ns-good.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: good-ns
spec: {}

---

apiVersion: v1
kind: ResourceQuota
metadata:
  name: foo-resource-quota
  namespace: good-ns
spec:
  hard:
    cpu: "1000"
    memory: 200Gi
    pods: "10"
  scopeSelector:
    matchExpressions:
    - operator : In
      scopeName: PriorityClass
      values: ["high"]
